# kf

./: HACKING  Makefile.am  aclocal.m4  config.h.in  configure.ac  kf.spec
data/: Makefile.in  archive.glade  archive.glade.h  contacts.glade  dock.glade.h  kf.glade.h  msg.glade.h  privacy.glade  privacy.glade.h  privacy_list.glade  privacy_list.glade.h  register.glade  register.glade.h  search.glade  search.glade.h  status.glade  status.glade.h  subscribe.glade.h
po/: POTFILES.in  bg.gmo  bg.po  de.po  el.po  es.po  hu.po  nl.po  pl.gmo  pl.po  zh_CN.po
src/: Makefile.am  Makefile.in  archive.c  archive_viewer.c  autoaway.c  autoaway.h  browse.h  callbacks.c  callbacks.h  change_password.c  change_password.h  chat.h  connection.h  contact_xchange.c  contact_xchange.h  disclosure-widget.c  disclosure-widget.h  dock.h  eggtrayicon.c  eggtrayicon.h  emoticons.h  events.c  foogc.c  foogc.h  gtktip.h  gui.c  gui.h  gui_status.c  jabber.c  jabber_connection.c  jabber_msg.c  jabber_roster.c  jisp.h  jispman.c  jispman.h  message.c  message.h  muc.c  muc.h  muc_private.h  (+17 more)
tags/kf-0.5.4.1/: Makefile.in  README  kf.apspec.in  kf.desktop
tags/kf-0.5.4.1/data/: Makefile.am  browse.glade.h  kf.glade  vcard.glade.h
tags/kf-0.5.4.1/data/emoticons/: emoticons.def
tags/kf-0.5.4.1/po/: kf.pot  ru.po
tags/kf-0.5.4.1/src/: accounts.c  accounts.h  browse.c  chat.c  connection.c  emoticons.c  events.h  filter.c  filter.h  gtktip.c  gui_pixmap.c  jabber.h  jisp.c  kf.c  kf.h  main.c  muc_join.c  muc_join.h  new_message.h  popup_menu.h  privacy_list.c  register.c  settings_blacklist.c  sound.c  statusbar.c  vcard.c  vcard.h  x_data.h  xevent.h
trunk/: AUTHORS  ChangeLog  configure  configure.in
trunk/data/: browse.glade  chat.glade  chat.glade.h  dock.glade  msg.glade  muc.glade  muc.glade.h  muc_join.glade  muc_join.glade.h  new_account.glade  new_account.glade.h  subscribe.glade  vcard.glade
trunk/data/emoticons/: Makefile.am  Makefile.in
trunk/po/: ChangeLog  de.po  es.po  fr.po  it.po  ja.po  pl.po  ru.gmo  zh_CN.po
trunk/src/: archive.h  archive_viewer.h  dock.c  jabber_msg.h  new_account.c  popup_group.c  popup_menu.c  privacy.c  privacy.h  register.h  settings.h  settings_blacklist.h  settings_icons.c  statusbar.h  xevent.c
