pkgdatadir = $(datadir)/kf

pixmaps = \
	add_contact.png \
	away.png \
	browse_aim.png \
	browse_book.png \
	browse_gg.png \
	browse_icq.png \
	browse_jud.png \
	browse_mail.png \
	browse_msn.png \
	browse_news.png \
	browse_room.png \
	browse_sms.png \
	browse_tlen.png \
	browse_user.png \
	browse_user2.png \
	browse_weather.png \
	browse_yahoo.png \
	button_search.png \
	chat.png \
	dnd.png \
	invisible.png \
	kf.png \
	logo.png \
	menu_configure.png \
	menu_register.png \
	menu_search.png \
	muc.png \
	network.png \
	online.png \
	password.png \
	people16.png \
	people24.png \
	pix_chat.png \
	pix_message.png \
	pix_system.png \
	plus.png \
	show_offline.png \
	unavailable.png \
	unavailable_desc.png \
	unknown.png \
	vcard.png \
	www.png \
	xa.png 
glade = \
	archive.glade \
	archive.glade.h \
	browse.glade \
	browse.glade.h \
	chat.glade \
	chat.glade.h \
	contacts.glade \
	dock.glade \
	dock.glade.h \
	kf.glade \
	kf.glade.h \
	msg.glade \
	msg.glade.h \
	muc.glade \
	muc.glade.h \
	muc_join.glade \
	muc_join.glade.h \
	new_account.glade \
	new_account.glade.h \
	privacy.glade \
	privacy.glade.h \
	privacy_list.glade \
	privacy_list.glade.h \
	register.glade \
	register.glade.h \
	search.glade \
	search.glade.h \
	status.glade \
	status.glade.h \
	subscribe.glade \
	subscribe.glade.h \
	vcard.glade \
	vcard.glade.h

sounds = \
	 bass.wav \
	 button.wav \
	 harp.wav

pkgdata_DATA = $(pixmaps) $(glade) $(sounds)
#shit_DATA = $(pkgdata_DATA)

SUBDIRS = emoticons
EXTRA_DIST = $(pkgdata_DATA)

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = kf.png
